[package]
name = "poseidon"
version = "0.1.0"
author = "MorphTail <chitniskshitij@gmail.com>"
edition = "2021"
description = "Automated Domain Reconnaissance Tool"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
spinners = "*"
